--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.2",
     "formidable": "^2.1.1",
     "https": "^1.0.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "languagedetect": "^2.0.0",
+    "pdf-parse": "^1.1.1"
   }
 }
